--- a/res/menu/activity_category.xml
+++ b/res/menu/activity_category.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
+        android:id="@+id/additem"
+        android:showAsAction="always"
         android:title="@string/menu_settings"/>
-
+	<item
+        android:id="@+id/deleteitem"
+        android:showAsAction="always"
+        android:title="@string/menu_settings"/>
+	
 </menu>
