--- a/res/layout/activity_category.xml
+++ b/res/layout/activity_category.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".CategoryActivity" >
+    tools:context=".CategoryActivity"
+    android:background="?android:attr/activatedBackgroundIndicator"  >
 
     <ListView
         android:id="@+id/ItemList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:soundEffectsEnabled="true">
+        android:layout_height="match_parent" 
+        android:soundEffectsEnabled="true"
+        android:spinnerMode="dialog">
     </ListView>
     
 
