--- a/res/layout/itemview.xml
+++ b/res/layout/itemview.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/itemnameval"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:id="@+id/itemamount"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="43dp"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_marginTop="10dp"
+        android:layout_alignBottom="@+id/itemnameval"
+        android:layout_marginRight="10dp"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/itemamount"
-        android:layout_width="wrap_content"
+        android:id="@+id/itemnameval"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/itemnameval"
-        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@+id/itemamount"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/itemnameval"
+        android:layout_marginLeft="10dp"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
