--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".MainActivity"
-    android:background="?android:attr/activatedBackgroundIndicator" >
+    tools:context=".MainActivity" >
 	
     <ListView
         android:id="@+id/listView1"
