--- a/res/layout/activity_category.xml
+++ b/res/layout/activity_category.xml
@@ -8,10 +8,10 @@
 
     <ListView
         android:id="@+id/ItemList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:soundEffectsEnabled="true"
-        android:spinnerMode="dialog">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:gravity="center"
+        android:soundEffectsEnabled="true">
     </ListView>
     
 
