--- a/res/layout/itemview.xml
+++ b/res/layout/itemview.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/cutomview" >
 
     <TextView
         android:id="@+id/itemamount"
@@ -10,22 +11,22 @@
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
         android:layout_alignBottom="@+id/itemnameval"
         android:layout_marginRight="10dp"
+        android:gravity="center"
         android:text="0"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/itemnameval"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_toRightOf="@+id/itemamount"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:text="Medium Text"
+        android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
