--- a/res/menu/activity_add_time_date.xml
+++ b/res/menu/activity_add_time_date.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/menu_save"
         android:showAsAction="always"
-        android:title="save"/>
+        android:title="Save"/>
 
 </menu>
