--- a/res/animator/do_nothing.xml
+++ b/res/animator/do_nothing.xml
@@ -3,8 +3,8 @@
     
 	<translate
         android:fromXDelta="0"
-        android:toXDelta="0"
-        android:duration="600"
+        android:toXDelta="-100%p"
+        android:duration="500"
     />
 	
 	
