--- a/res/layout/activity_add_time_date.xml
+++ b/res/layout/activity_add_time_date.xml
@@ -8,6 +8,7 @@
         android:id="@+id/timePicker1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true" />
 
@@ -15,6 +16,7 @@
         android:id="@+id/datePicker1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
