--- a/res/drawable/listselector.xml
+++ b/res/drawable/listselector.xml
@@ -3,10 +3,13 @@
     android:exitFadeDuration="1000">
 
    
-   <item android:drawable="@android:color/holo_blue_bright" android:state_selected="true"/>
-   <item android:drawable="@android:color/holo_blue_bright" android:state_selected="false"/>
-   <item android:drawable="@android:color/holo_blue_light" android:state_pressed="true"/> 
+   <item android:drawable="@drawable/cutomviewhighlight" android:state_selected="true"/>
+   <item android:drawable="@drawable/cutomview" android:state_selected="false"/>
    
-  <!--<item android:drawable="@android:color/holo_blue_bright" android:state_activated="true"/>-->
-
+   <item android:drawable="@drawable/cutomviewhighlight" android:state_pressed="true"/> 
+   <item android:drawable="@drawable/cutomview" android:state_pressed="false"/>
+   
+   <item android:drawable="@drawable/cutomviewhighlight" android:state_activated="true"/>
+   <item android:drawable="@drawable/cutomview" android:state_activated="false"/>
+		
 </selector>
