--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" android:listSelector="@null">
 
     </ListView>
 	 <FrameLayout
