--- a/res/layout/category_list.xml
+++ b/res/layout/category_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     
-    android:background="@drawable/cutomview"
+    android:background="@drawable/listselector"
     >
 
     <ImageView
