--- a/res/menu/activity_edit.xml
+++ b/res/menu/activity_edit.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/save_edit"
         android:showAsAction="always"
         android:title="save edits"/>
 
